[package]
name = "toka-kernel"
version = "0.2.1"
edition = "2021"
description = "Kernel-level enforcement and security for Toka tool execution"
documentation = "https://docs.rs/toka-kernel"
repository = "https://github.com/user/Toka"
license = "MIT OR Apache-2.0"
keywords = ["kernel", "security", "tools", "enforcement"]
categories = ["os", "development-tools"]

[dependencies]
# Core Toka components
toka-types = { path = "../toka-types" }
toka-bus-core = { path = "../toka-bus-core" }
toka-auth = { path = "../toka-auth" }

# Core async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization for configuration and capabilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

# Security and cryptography
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

# System monitoring (optional, for advanced resource tracking)
sysinfo = { version = "0.30", optional = true }

# Global static storage
once_cell = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = ["monitoring"]
monitoring = ["sysinfo", "tracing-subscriber"]
testing = []

[[bin]]
name = "toka-kernel-monitor"
path = "src/bin/monitor.rs"
required-features = ["monitoring"]
