[package]
name = "toka-ledger-agents"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Agent-native extensions (intent clustering, provenance helpers) on top of toka-ledger-core."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
parking_lot = "0.12"
ndarray = "0.15"
tokio = { workspace = true, features = ["sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34"
rmp-serde = "1.1"

toka-ledger-core = { path = "../toka-ledger-core" } 